-fix overflow x on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@
   }
 }
 
+html{
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 h1, p, h2, h3, h4, ul, li, div {
   margin: 0;
   padding: 0;
